# angela-cli

./: .env.example  .gitignore  Angela-CLI.md  FUTURE_README.md  Makefile  QUICKSTART.md  README.MD  README.md  Roadmap.md  analysis_test.py  auto_execute_script.py  auto_print.py  big_man_script.py  big_text_printer.py  cool_script.py  debug_script.py  final_test_script.py  fnallly_script.py  gg_script.py  improve.md  manipulate_test.py  migrate_trusted_commands.py  new_script.py  please_script.py  pyproject.toml  repomix-output.xml  requirements.txt  setup.py  test_async_commands.sh  test_flow.md  test_frameworks.py  tree.md
MD/: Info.md  Next-Steps.md  NextSteps.md  Next_Steps.md  Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  Phase6.md  Phase7.md  README.md  Start.md  context.md  fix.md  plan-commands.md  plan.md  rollback.md
angela/: __init__.py  __main__.py  check_services.py  cli.py  config.py  constants.py  diagnostic.py  integrations.py  main.py  orchestrator.py  parser.py  repomix-output.xml  typescript
angela_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
integrations/: __init__.py  phase12_integration.py  semantic_integration.py
public/: index.html
scripts/: generate_docs.sh  install-quick.sh  install.sh  uninstall.sh
shell/: angela.zsh
src/: App.test.tsx  App.tsx  index.css  index.tsx  routes.tsx
tests/: __init__.py  commands.md  conftest.py  test_ai_client.py  test_basic.py  test_context.py  test_context_enhancer.py  test_enhanced_planner.py  test_enhanced_rollback.py  test_execution.py  test_file_activity.py  test_file_detector.py  test_file_resolver.py  test_filesystem.py  test_integration.py  test_integrations.py  test_multi_step.py  test_orchestration.py  test_safety.py  (+2 more)
(+254 files in other folders)
